src/objects/Apttus_Config2__TempObject__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__AssetCache__c</fullName>
        <description>The asset cache</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The asset cache</inlineHelpText>
        <label>Asset Cache</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetDataCache__c</fullName>
        <description>The asset data cache</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The asset data cache</inlineHelpText>
        <label>Asset Data Cache</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CartCache__c</fullName>
        <description>The cart cache</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The cart cache</inlineHelpText>
        <label>Cart Cache (Deprecated)</label>
        <length>128000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Data__c</fullName>
        <description>Temporary data</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeveloperName__c</fullName>
        <description>The object name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LocationCache__c</fullName>
        <description>The location cache</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Cache</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionFilterCache__c</fullName>
        <description>The option filter cache</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Option Filter Cache</label>
        <length>128000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>